# how-many-attention-heads-xor

./: .gitignore  .lean-setup.sh  .lean-setup2.sh  AGENTS.md  CLAUDE.md  CLOUD_HANDOFF.md  CODEX_THEORY_WORKFLOW.md  CODEX_WORKFLOW.md  CONSOLIDATION.md  OPEN_PROBLEM_Hstar_2block.md  README.md  cut_cell_counterexample.md  f6_hstar_gt4_problem.md  lemmas.md  literature_survey.md  model.md  model_feedforward.md  problem_statement.md  proposal.tex  pyproject.toml  theorems.md  three_head_functions_n3.md  todo.md  writeup.md
.l12-work/: architecture-workflow-result.json  p1_foundation.txt  p2_model_bridge.txt  p3_symmetrize_univariate.txt  p4_upper_bound.txt
claude-comments/: hstar_mfdeg_tchow.md
consolidated/: README.md
formalization/: BUILDING.md  HeadComplexity.lean  PROOF_OVERVIEW.md  README.md  build.slurm  check.slurm  check2.slurm  checkmod.slurm  checkmod2.slurm  checkmod3.slurm
head-complexity/: BUILDING.md  HeadComplexity.lean  PROOF_OVERVIEW.md  README.md  REMAINING_LEMMAS_ROADMAP.md  UPPER_BOUND_ROADMAP.md  build.slurm  check2.slurm  lake-manifest.json  lakefile.toml
informal_proofs/: results.jsonl
lemmas/: 01_checkerboard_restriction.md  02_symmetric_thresholds.md  03_family_consequences.md  04_weighted_sum_upper_bound.md  05_linear_fractional_normal_form.md  06_symmetric_sign_changes.md  07_positive_projection_sign_changes.md  08_three_bit_projection_cases.md  106_split_affine_cylinder_cost.md  108_split_affine_cylinder_refines_split_affine_free.md  109_affine_cylinder_first_levels_exact.md  110_split_affine_cylinder_first_levels_exact.md  (+81 more)
(+984 files in other folders)
