[project]
name = "how-many-attention-heads-xor"
version = "0.0.0"
description = "Research scripts and exact certificates for Boolean head complexity"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy",
    "pycosat",
    "scipy",
    "threadpoolctl",
]

[project.optional-dependencies]
research = [
    "networkx",
    "sympy",
    "z3-solver",
]
torch = [
    "torch",
]

[tool.uv]
package = false
